# zero2prod

./: .dockerignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  cloudbuild.yaml
.cargo/: config.toml
.github/workflows/: cloud-build.yml  rust.yml
migrations/: 20240508123622_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
